--- a/style.css
+++ b/style.css
@@ -155,6 +155,8 @@ input[type="search"]::-webkit-input-placeholder {
  	div.height-300px a {height: 100px;
  		line-height: 200px;}
 
+ 	div.height-400px {height: 400px;}
+
  	
 	
 	div.height-100px {height: 100px;}
